--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "nodemon --exec ts-node src/index.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sameeravhad119/express-practice.git"
@@ -17,9 +19,11 @@
   "homepage": "https://github.com/sameeravhad119/express-practice#readme",
   "dependencies": {
     "@types/express": "^4.17.7",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.6.0",
     "@types/nodemon": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.0",
     "node": "^14.8.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
