--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/sameeravhad119/express-practice#readme",
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.7",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.6.0",
     "@types/nodemon": "^1.19.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.0",
     "node": "^14.8.0",
